JDK 25 support in logs (allow-list warnings)